# pitfall

./: .gitignore  .prettierignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml
rmc/: package-lock.json  package.json  tsconfig.json  webpack.config.js
rmc/src/: config.ts  index.ts
rmc/src/__tests__/: integer.spec.ts  options.spec.ts
rmc/src/lib/: exceptions.ts  file.ts  integer.ts  options.ts
test/: pyproject.toml  pytest.ini
test/src/: conftest.py  json_test.py  options_test.py
test/src/lib/: json.py  process.py
test/src/resources/expected/: i2.json  i4.json
test/src/resources/setup/: c2.json
