[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["ragnar1904 <apollo.oth@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
autopep8 = "^1.5.7"
assertpy = "^1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"